--- a/find-sharp/find-sharp.csproj
+++ b/find-sharp/find-sharp.csproj
@@ -6,6 +6,7 @@
         <RootNamespace>find_sharp</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PublishAot>true</PublishAot>
     </PropertyGroup>
 
 </Project>
