--- a/find-sharp.csproj
+++ b/find-sharp.csproj
@@ -7,6 +7,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PublishAot>true</PublishAot>
+        <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
+        <GCLatencyMode>Batch</GCLatencyMode>
     </PropertyGroup>
 
 </Project>
